<resources>
    <string name="app_name">Leo</string>
    <!-- Strings related to login -->
    <string name="not_a_user_register">Not a User? Register</string>
    <string name="login">Login</string>
    <string name="precautions">Precautions</string>
    <string name="i_am_in_trouble">I am in Trouble</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile number</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="ready_to_help">Ready To Help</string>
    <string name="update_emergency_contact">Update Emergency Contact</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_permission">Location Permission</string>
    <string name="sms_permission">SMS Permission</string>
    <string name="sms_permission_is_required">SMS permission is required</string>
    <string name="location_permission_is_required">Location permission is required</string>
    <string name="unmark_trouble">UnMark Trouble</string>
    <string name="settings">Settings</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="i_agree_to_terms_amp_conditions">I agree to </string>
    <string name="terms_and_conditions"><a href="https://drive.google.com/file/d/1W5GDYjWCFIj_dfbctg0iA_9Unp8gkoKU/view?usp=sharing">Terms and Conditions</a></string>
    <string name="privacy_policy"><a href="https://drive.google.com/file/d/1auANTHv5d-9phggss4s0SRCl5_wmepu_/view?usp=sharing">Privacy Policy</a></string>
    <string name="leo_platfrom">Leo Platfrom</string>
    <string name="website_link"><a href="#">Check out our Website</a></string>
    <string name="bot_link"><a href="#">Check out our Bot</a></string>
    <string name="about_us_team">► Prajwal Adsul\n► Mayank Jain\n► Gouri Nangliya\n► Priyanka Kankal\n► Rohit Chaudhari\n► Akansha Mahajan</string>
    <string name="about_us_quote">Inspired by \n\'Coming together is the beginning. Keeping together is progress. Working together is success.\' — Henry Ford</string>
    <string name="about_us_info">Just over a few months ago, we started working on making cities safe. We were encouraged by our college COEP to take part in the Smart India Hackathon - World\'s Biggest Open Innovation Model. We are a group of students from Computer Engineering with different interests and skills who came to work and collaborate together to find the solution for Crimes in cities.</string>
    <string name="your_safety_is_our_responsibility">Protecting you like family</string>
    <string name="schedule_fall_detection">Schedule Fall Detection</string>
</resources>