<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.rohit2810.leo_kotlin.ui.permissionRequest.PermissionRequestViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.permissionRequest.PermissionRequestFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_permission"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location_permission_is_required" />
            </LinearLayout>

            <Switch
                android:id="@+id/switch_location"
                android:layout_width="0dp"
                android:checked="@{viewmodel.isLocationPermissionGranted}"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sms_permission"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sms_permission_is_required" />
            </LinearLayout>

            <Switch
                android:id="@+id/switch_sms"
                android:layout_width="0dp"
                android:checked="@{viewmodel.isSMSPermissionGranted}"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>
        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/button"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:enabled="@{viewmodel.allPermissionsGranted}"
            android:text="Next >"
            android:onClick="@{() -> viewmodel.navigateToMainClick()}"
            tools:targetApi="lollipop" />

    </LinearLayout>
</layout>