<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.rohit2810.leo_kotlin.ui.main.MainViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_precaution"
                    android:layout_width="200dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_margin="8dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_button_style"
                    android:text="@string/precautions"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/button_trouble"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/trouble_button_style"
                    android:onClick="@{() -> viewmodel.sendTrouble()}"
                    android:text="@string/i_am_in_trouble"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/button_location"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/login_button_style"
                    android:onClick="@{() -> viewmodel.navigateToMaps()}"
                    android:text="My Location"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/button_unMark_trouble"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/success_button_style"
                    android:onClick="@{() -> viewmodel.unMarkTroubleUtil()}"
                    android:text="@string/unmark_trouble"
                    android:textColor="#fff" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/leo2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>