<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.rohit2810.leo_kotlin.ui.login.LoginViewModel" />

        <variable
            name="view"
            type="android.view.View" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/edit_text_username"
                    app:srcCompat="@drawable/leo2" />

                <TextView
                    android:id="@+id/intro_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="0dp"
                    android:text="Welcome Back!"
                    android:textColor="@color/intro_title_color"
                    android:textSize="32dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/intro_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:lineSpacingExtra="16dp"
                    android:text="Login to your existing account of Leo"
                    app:layout_constraintVertical_bias="0.13" />
            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.52" />

            <EditText
                android:id="@+id/edit_text_username"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_style"
                android:drawableStart="@drawable/login_person"
                android:drawableLeft="@drawable/login_person"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorAccent"
                android:elevation="10dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:text="@={viewmodel.username}"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <EditText
                android:id="@+id/edit_text_pass"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/edit_text_style"
                android:drawableStart="@drawable/login_password"
                android:drawableLeft="@drawable/login_password"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorAccent"
                android:elevation="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={viewmodel.password}"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_username" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/login_button_style"
                android:onClick="@{() -> viewmodel.navigateToMain()}"
                android:text="@string/login"
                android:textColor="#fff"
                android:visibility="@{viewmodel.isProgressVisible ? view.INVISIBLE : view.VISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_pass" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viewmodel.isProgressVisible ? view.VISIBLE : view.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/btn_login"
                app:layout_constraintEnd_toEndOf="@+id/btn_login"
                app:layout_constraintStart_toStartOf="@+id/btn_login"
                app:layout_constraintTop_toTopOf="@+id/btn_login" />

            <Button
                android:id="@+id/btn_forgot"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:onClick="@{() -> viewmodel.navigateToForgot()}"
                android:text="Forgot Password?"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" />

            <Button
                android:id="@+id/btn_register"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:onClick="@{() -> viewmodel.navigateToRegister()}"
                android:text="Don't have an account? Sign Up"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_forgot" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>